client/css/dashboard.css
/* ... */
	main > nav .collapse {
		margin-top: auto;
	}
		main > nav .collapse .name {
			color: #ccc;
			margin: 0 auto;
		}
	nav.collapsed {
		overflow: unset;
	}
main > nav.collapsed .dashboard-search {
	display: none;
}
main > nav.collapsed .selected {
	box-shadow: none !important;
	background: var(--color-accent) !important;
}
	nav.collapsed > .item {
		position: relative;
	}
	nav.collapsed > .item > .submenu {
		position: absolute;
		left: 100%;
		width: 220px;
		top: 0;
		background: var(--color-primary);
		box-shadow: 0 0 25px rgba(0, 0, 0, 0.25);
	}
		nav > .item > .collapsed-submenu-bar .label {
			padding-left: 10px;
		}
		nav > .item > .collapsed-submenu-bar .submenu .label {
			padding-left: 40px;
		}
		nav > .item .left span {
			padding: 0 5px;
		}
		nav > .item.list-open {
			box-shadow: inset 10px 0px 0 var(--color-accent);
		}
main > nav::-webkit-scrollbar {
	background: var(--color-secondary);
	width: 8px;
}
main > nav::-webkit-scrollbar-thumb {
	background: var(--color-accent);
}
main > nav::-webkit-scrollbar-track {
	box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.25);
}
	main > nav .NA {
		text-align: center;
		padding: 20px;
	}
		main > nav .NA svg {
			font-size: 175%;
		}
	main > nav .label {
		display: flex;
		padding: 12px;
		align-items: center;
		border-radius: 0;
		font: inherit;
		vertical-align: inherit;
		transition: background var(--transition-duration),
					box-shadow var(--transition-duration);
	}
	main > nav .label:hover {
		text-decoration: none;
		background: rgba(0, 0, 0, 0.2);
	}
	main > nav .label:active {
		box-shadow: inset 0 0 25px rgba(0, 0, 0, 0.3);
	}
	main > nav .label.selected {
		background: rgba(0, 0, 0, 0.15);
		box-shadow: inset 6px 0px 0 var(--color-primary);
	}
		main > nav .submenu .label {
			padding-left: 40px;
		}
		main > nav .submenu .submenu .label {
			padding-left: 60px;
		}
		main > nav .submenu .submenu .submenu .label {
			padding-left: 90px;
		}
			main > nav .item .label .name {
				margin-left: 8px;
			}
			main > nav .item .label .angle {
				transition: transform var(--transition-duration);
				margin-left: auto;
			}
			main > nav .item .label .angle.down {
				transform: rotate(90deg);
			}
	main > nav footer {
		margin-top: auto;
	}
		.collapsed-grid .collapse-panel {
			display: flex;
			padding: 12px 0;
			justify-content: center;
			width: 100%;
			color: #fff;
		}
	 	main > nav footer .collapse-panel {
			padding: calc(var(--gap) * 2);
			color: #ccc;
		}
		main > nav footer .collapse-panel:hover {
			cursor: pointer;
			background: rgba(0, 0, 0, 0.15);
		}

main #reports.show {
	display: grid;
	grid-gap: calc(var(--gap) * 2);
	padding: calc(var(--gap) * 2) calc(var(--gap) * 3);
	grid-template-rows: max-content max-content max-content;
}

main #reports > h1.dashboard-name {
	border: 0;
	font-size: 150%;
	border-bottom:  1px dashed #ccc;
	font-weight: normal;
	display: flex;
	justify-content: space-between;
}
	main #reports > h1.dashboard-name > div {
		display: flex;
		opacity: 0;
		transition: opacity var(--transition-duration);
	}
	main #reports > h1.dashboard-name:hover > div {
		opacity: 1;
	}
		main #reports > h1.dashboard-name > div span {
			font-size: 70%;
			display: flex;
			justify-content: center;
			align-items: center;
			width: 25px;
			transition: background var(--transition-duration),
						color var(--transition-duration);
		}
		main #reports > h1.dashboard-name > div span:hover {
			background: var(--color-accent);
			color: var(--color-accent-text);
			cursor: pointer;
		}

main #reports > .toolbar {
	align-items: flex-end;
	background: transparent;
	padding: 0;
}
	main #reports > .toolbar input[name=date-range] {
		width: 250px;
		text-align: center;
		letter-spacing: 0.5px;
	}
	main #reports > .toolbar label select {
		max-width: 200px;
	}

main #mailto.selected {
	background: var(--color-accent);
	color: var(--color-accent-text);
	border-color: var(--color-accent);
}
main .mailto-content {
	background: #fff;
	align-items: end;
	margin-bottom: calc(var(--gap) * 2);
	position: sticky;
	top: 45px;
	z-index: 10;
	grid-template-columns: max-content max-content max-content max-content;
	box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
	grid-gap: calc(var(--gap) * 2);
}
main #reports > .global-filters {
	display: flex;
	z-index: 7;
	transition: transform var(--transition-duration),
				opacity var(--transition-duration);
}
main #reports > .global-filters.right {
	flex-direction: column;
	position: fixed;
	overflow: auto;
	opacity: 0;
	width: 260px;
	right: 0px;
	top: 50px;
	bottom: 0;
	background: #fff;
	padding: 0 calc(var(--gap) * 2);
	box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
	transform: translateX(260px);
}
main #reports > .global-filters.right.show {
	transform: translateX(0px);
	opacity: 1;
}
main #reports > .global-filters.top {
	flex-wrap: wrap;
	padding: 0 calc(var(--gap) * 2);
	align-items: flex-end;
	margin: 0 calc(var(--gap) * -3);
	position: sticky;
	top: 0;
	background: #eee;
	z-index: 5;
}
main #reports > .global-filters.top.scrolled {
	padding: calc(var(--gap) * 2);
	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
}
	main #reports > .global-filters.top .head {
		display: none;
	}
	main #reports > .global-filters.top > * {
		margin: var(--gap);
	}
	main #reports > .global-filters.right > * {
		padding: var(--gap) 0;
		flex-shrink:  0;
	}
	main #reports > .global-filters > .head {
		width: 100%;
		display: flex;
		align-items: center;
	}
	main #reports > .global-filters > .heading {
		border-bottom: 1px solid #ddd;
		position: sticky;
		top: 0;
		background: #fff;
		z-index: 1;
		padding-top: var(--gap);
	}
		main #reports > .global-filters > .head label {
			grid-auto-flow: column;
			font-size: 90%;
			align-items: center;
		}
			main #reports > .global-filters > .head.heading input[type=search] {
				border: 0;
				width: 100%;
				outline: 0;
			}
			main #reports > .global-filters > .head.heading svg {
				color: #999;
			}
/* ... */

